# OsteoVigil

./: .dockerignore  .gitignore  Dockerfile  PROJECT_STATUS.md  README.md  bootstrap.py  desktop_app.py  install_febio.py  launch_osteovigil.bat  launch_osteovigil.command  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
config/: default.yaml
data/demo/: README.md
data/demo/abnormal_synthetic_cpt/: afo_proxy.stl
data/demo/normal_real_talocrural/: IM-0002-0001.dcm  IM-0002-0002.dcm  IM-0002-0003.dcm  IM-0002-0004.dcm  IM-0002-0005.dcm  IM-0002-0006.dcm  IM-0002-0007.dcm  IM-0002-0008.dcm  IM-0002-0009.dcm  IM-0002-0010.dcm  IM-0002-0011.dcm  IM-0002-0012.dcm  IM-0002-0013.dcm  IM-0002-0014.dcm  IM-0002-0015.dcm  IM-0002-0016.dcm  IM-0002-0017.dcm  IM-0002-0018.dcm  IM-0002-0019.dcm  IM-0002-0020.dcm  IM-0002-0021.dcm  IM-0002-0022.dcm  IM-0002-0023.dcm  IM-0002-0024.dcm  IM-0002-0025.dcm  IM-0002-0026.dcm  IM-0002-0027.dcm  IM-0002-0028.dcm  IM-0002-0029.dcm  IM-0002-0030.dcm  IM-0002-0031.dcm  IM-0002-0032.dcm  IM-0002-0033.dcm  IM-0002-0034.dcm  IM-0002-0035.dcm  IM-0002-0036.dcm  IM-0002-0037.dcm  IM-0002-0038.dcm  (+287 more)
src/: __init__.py
src/cpt_predictor/: __init__.py  analysis.py  brace.py  cli.py  config.py  fea.py  logging_utils.py  materials.py  meshing.py  models.py  pipeline.py  preprocessing.py  reporting.py  segmentation.py  simulator.py  visualization.py
tests/: test_fea.py  test_febio_manager.py  test_materials.py  test_pipeline_smoke.py  test_preprocessing.py  test_segmentation.py  test_simulator.py
(+186 files in other folders)
